<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="nav_menu_message">Message</string>
    <string name="nav_menu_chat">Chat</string>
    <string name="nav_menu_profile">Profile</string>
    <string name="nav_menu_communicate">Communicate</string>
    <string name="nav_menu_send">Send</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>