<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_message"
            android:title="@string/nav_menu_message"
            android:icon="@drawable/ic_message"
            />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/nav_menu_chat"
            android:icon="@drawable/ic_chat"
            />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_menu_profile"
            android:icon="@drawable/ic_profile"
            />
    </group>
    <item android:title="@string/nav_menu_communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send"
                android:title="@string/nav_menu_send"
                />
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"
                />
        </menu>
    </item>
</menu>